/*
 * $Id: ChangeLog,v 1.227 2002/05/20 21:24:25 mafact Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2002-05-20 15:36 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    ! Fixed minor bug in hb_vmProcessSymbols() where sModule was NOT allocated.

2002-05-20 23:20 UTC+0100 J.lefebvre (Mafact) <jfl@mafact.com>
 * source/compiler/hbusage.c
   * void hb_compPrintCredits( void )
     Major bug fixed where my name was missing from the list ;-))))

2002-05-20 13:40 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.c
    + Corrected inclusion of <errno.h>

  * makefile.bc
    ! Corrected path of hbmlang.c

  * include/hberrors.h
    + Added: #define HB_PP_ERR_LABEL_MISSING                 19

  * source/pp/pptable.c
    ! Corrected representation of #define _DFSET ...

  * source/pp/ppcore.c
    ! Corrected hb_pp_ParseDefine() to compile Pseudo-Functions such that parametes are correctly expanded.

  * utils/hbmake/hbmake.prg
    ! Corrected invalid #define (used #translate format).

2002-05-19 21:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * utils/hbmake/hbmake.prg
    * Fixed an minor bug
  * source/rtl/tprint.cpp
    source/rtl/tprinter.cpp
    include/tprint.hpp
    * Mijor formatting.
    * Fixed compilation warning

2002-05-18 10:20 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * makefile.bc
    makefile.vc
    utils/hbmake/Makefile
    * Added hbmlang.c to dependencie list
  * utils/hbmake/hbmake.prg
    - Removed GETLANG() function and moved to an new file
  + utils/hbmake/hbmlang.c
    * GETLANG.c is on this file now

2002-05-18 13:40 UTC+0100 Marek Paliwoda <paliwoda@inetia.pl>
  * source/compiler/harbour.c
    * Fixed errno compilation problem under Linux

2002-05-18 01:41 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h