@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.227 2002/05/20 21:24:25 mafact Exp $
+ * $Id: ChangeLog,v 1.228 2002/05/20 22:37:40 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,6 +8,11 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2002-05-21 08:35 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * include/hbexprb.c
+    ! Fixed bug in optimization of (equality test):
+        xExp = .T.
+        xExp = .F.
 
 2002-05-20 15:36 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/vm/hvm.c
